name: Test enrollment disabling button
seedFile: fixtures/course-tp-assignment.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 1000
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: Course Details
  - waitFor: 1000
  - tapOn:
      text: Block new enrollments
  - waitFor: 1000
  - tapOn:
      text: Save course settings
      allowScroll: true
  - assertVisible:
      text: "Course settings saved."
  - waitFor: 10000
  - authenticateUser:
      username: student5@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 200
  - typeText:
      placeholder: "e.g., STU-1A2B3C"
      text: STU-E2E
  - tapOn:
      text: "Join course"
  - assertVisible:
      text: "New students are not allowed to join this course right now."
  - typeText:
      placeholder: "e.g., STU-1A2B3C"
      text: TA-E2E
  - tapOn:
      text: "Join course"
  - assertVisible:
      text: "E2E Test Course"
